--- a/RAG_Learning/RAG_Learning.ipynb
+++ b/RAG_Learning/RAG_Learning.ipynb
@@ -2317,6 +2317,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3min 10s, sys: 14 s, total: 3min 24s\n",
+      "Wall time: 3min 28s\n"
+     ]
     }
    ],
    "source": [
@@ -2331,15 +2339,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 437 µs, sys: 2.88 ms, total: 3.31 ms\n",
-      "Wall time: 5.87 ms\n"
+      "CPU times: user 189 µs, sys: 889 µs, total: 1.08 ms\n",
+      "Wall time: 1.12 ms\n"
      ]
     },
     {
@@ -2348,7 +2356,7 @@
        "'often. • Calm your “sweet tooth” by eating fruits, such as berries or an apple. • Replace sugary soft drinks with seltzer water, tea, or a small amount of 100 percent fruit juice added to water or soda water. The Food Industry: Functional Attributes of Carbohydrates and the Use of Sugar Substitutes In the food industry, both fast-releasing and slow-releasing carbohydrates are utilized to give foods a wide spectrum of functional attributes, including increased sweetness, viscosity, bulk, coating ability, solubility, consistency, texture, body, and browning capacity. The differences in chemical structure between the different carbohydrates confer their varied functional uses in foods. Starches, gums, and pectins are used as thickening agents in making jam, cakes, cookies, noodles, canned products, imitation cheeses, and a variety of other foods. Molecular gastronomists use slow- releasing carbohydrates, such as alginate, to give shape and texture to their fascinating food creations. Adding fiber to foods increases bulk. Simple sugars are used not only for adding sweetness, but also to add texture, consistency, and browning. In ice cream, the combination of sucrose and corn syrup imparts sweetness as well as a glossy appearance and smooth texture.'"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2362,7 +2370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2371,7 +2379,7 @@
        "1680"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2382,7 +2390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2391,7 +2399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2399,8 +2407,8 @@
      "output_type": "stream",
      "text": [
       "mps\n",
-      "CPU times: user 2.55 s, sys: 1.03 s, total: 3.58 s\n",
-      "Wall time: 25 s\n"
+      "CPU times: user 1min, sys: 2.58 s, total: 1min 2s\n",
+      "Wall time: 1min 17s\n"
      ]
     },
     {
@@ -2416,7 +2424,7 @@
        "       device='mps:0')"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2445,7 +2453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2651,7 +2659,7 @@
        "       dtype=float32)}"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2662,7 +2670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2674,7 +2682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2779,7 +2787,7 @@
        "4  [ 3.30264531e-02 -8.49766191e-03  9.57159698e-...  "
       ]
      },
-     "execution_count": 159,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2827,7 +2835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3007,7 +3015,7 @@
        "[1680 rows x 6 columns]"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3040,7 +3048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3049,7 +3057,7 @@
        "torch.Size([1680, 768])"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3060,9 +3068,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/huggingface_hub/file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Create model\n",
     "from sentence_transformers import util, SentenceTransformer\n",
@@ -3090,7 +3107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3099,7 +3116,7 @@
        "torch.Size([1680, 768])"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3117,7 +3134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3125,7 +3142,7 @@
      "output_type": "stream",
      "text": [
       "Query: macronutrient functions\n",
-      "[INFO] Time taken to get scores on 1680 embeddings: 0.00035 seconds.\n"
+      "[INFO] Time taken to get scores on 1680 embeddings: 0.05371 seconds.\n"
      ]
     },
     {
@@ -3136,7 +3153,7 @@
        "indices=tensor([42, 47, 46, 51, 41], device='mps:0'))"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3166,15 +3183,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Embeddings shape: torch.Size([1680000, 768])\n",
-      "[INFO] Time taken to get scores on 1680 embeddings: 0.08644 seconds.\n"
+      "Embeddings shape: torch.Size([168000, 768])\n",
+      "[INFO] Time taken to get scores on 1680 embeddings: 0.02596 seconds.\n"
      ]
     }
    ],
@@ -3213,7 +3230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3226,7 +3243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -3371,7 +3388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -3380,7 +3397,7 @@
        "Text(0.5, 1.0, \"Query: 'macronutrient functions' | Most Relevant Page:\")"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3438,7 +3455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -3497,21 +3514,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'embedding_model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/faizahmed/Desktop/Learning/Neural-Network-Learning/RAG_Learning/RAG_Learning.ipynb Cell 64\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/faizahmed/Desktop/Learning/Neural-Network-Learning/RAG_Learning/RAG_Learning.ipynb#Y135sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mretrieve_relevant_resources\u001b[39m(query: \u001b[39mstr\u001b[39m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/faizahmed/Desktop/Learning/Neural-Network-Learning/RAG_Learning/RAG_Learning.ipynb#Y135sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m                                 embeddings: torch\u001b[39m.\u001b[39mtensor,\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/faizahmed/Desktop/Learning/Neural-Network-Learning/RAG_Learning/RAG_Learning.ipynb#Y135sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m                                 model: SentenceTransformer\u001b[39m=\u001b[39membedding_model,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/faizahmed/Desktop/Learning/Neural-Network-Learning/RAG_Learning/RAG_Learning.ipynb#Y135sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m                                 n_resources_to_return: \u001b[39mint\u001b[39m\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/faizahmed/Desktop/Learning/Neural-Network-Learning/RAG_Learning/RAG_Learning.ipynb#Y135sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m                                 print_time: \u001b[39mbool\u001b[39m\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/faizahmed/Desktop/Learning/Neural-Network-Learning/RAG_Learning/RAG_Learning.ipynb#Y135sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m  \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/faizahmed/Desktop/Learning/Neural-Network-Learning/RAG_Learning/RAG_Learning.ipynb#Y135sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m  Embed a query with model and returns top k socres and indices from embeddings\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/faizahmed/Desktop/Learning/Neural-Network-Learning/RAG_Learning/RAG_Learning.ipynb#Y135sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m  \"\"\"\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/faizahmed/Desktop/Learning/Neural-Network-Learning/RAG_Learning/RAG_Learning.ipynb#Y135sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m   \u001b[39m# Embed the query\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'embedding_model' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def retrieve_relevant_resources(query: str,\n",
     "                                embeddings: torch.tensor,\n",
@@ -3541,7 +3546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3569,14 +3574,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] Time taken to get scores on 1680 embeddings: 0.00138 seconds\n",
+      "[INFO] Time taken to get scores on 1680 embeddings: 0.00106 seconds\n",
       "Score: 0.6964\n",
       "Text:\n",
       "• Change it up a bit and experience the taste and satisfaction of other whole\n",
@@ -3695,7 +3700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3707,14 +3712,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Available MPS memory: 5.255575656890869 GB\n"
+      "Available MPS memory: 1.2584247589111328 GB\n"
      ]
     }
    ],
@@ -3733,16 +3738,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GPU memory: 5.255575656890869 | Recommended model: Gemma 2B in 4-bit precision.\n",
-      "use_quantization_config set to: True\n",
-      "model_id set to: google/gemma-1.1-2b-it\n"
+      "Your available GPU memory is 1.2584247589111328GB, you may not have enough memory to run a Gemma LLM locally without quantization.\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'use_quantization_config' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/faizahmed/Desktop/Learning/Neural-Network-Learning/RAG_Learning/RAG_Learning.ipynb Cell 72\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/faizahmed/Desktop/Learning/Neural-Network-Learning/RAG_Learning/RAG_Learning.ipynb#Y145sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     use_quantization_config \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m \n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/faizahmed/Desktop/Learning/Neural-Network-Learning/RAG_Learning/RAG_Learning.ipynb#Y145sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     model_id \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mgoogle/gemma-7b-it\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/faizahmed/Desktop/Learning/Neural-Network-Learning/RAG_Learning/RAG_Learning.ipynb#Y145sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39muse_quantization_config set to: \u001b[39m\u001b[39m{\u001b[39;00muse_quantization_config\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/faizahmed/Desktop/Learning/Neural-Network-Learning/RAG_Learning/RAG_Learning.ipynb#Y145sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mmodel_id set to: \u001b[39m\u001b[39m{\u001b[39;00mmodel_id\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'use_quantization_config' is not defined"
      ]
     }
    ],
@@ -3784,6 +3798,15 @@
     "4. An LLM model - this will be what we use to generate text based on an input!\n",
     "\n",
     "> **Note:** There are many tips and tricks on loading/making LLMs work faster. One of the best ones is flash_attn (Flash Attention 2). See the GitHub for more."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.mps.empty_cache()"
    ]
   },
   {
